# wdl2docs

./: .dockerignore  .gitignore  Dockerfile  GITHUB_PAGES_SETUP.md  LICENSE  Makefile  README.md  example_test.py  pyproject.toml  requirements.txt  temp.wdl
.github/workflows/: docker-publish.yml  docs.md  docs.yml  test.yml
.scripts/: serve_docs.py
src/application/: ports.py
src/application/use_cases/: generate_documentation.py  generate_workflow_graph.py
src/cli/: __init__.py  main.py
src/domain/: entitites.py  errors.py  value_objects.py
src/infrastructure/: __init__.py
src/infrastructure/fs/: __init__.py  discovery.py  document_repo.py
src/infrastructure/parsing/: README.md  __init__.py  analyzer.py  ast_mapper.py  call_parser.py  docker_extractor.py  graph_generator.py  loader.py  miniwdl_parser.py  path_resolver.py  wdl_loader.py
src/infrastructure/rendering/: __init__.py  generator.py  html_generator.py  template_renderer.py
src/infrastructure/templating/: __init__.py  asset_copier.py
tests/: conftest.py
tests/application/use_cases/: __init__.py  conftest.py  test_generate_documentation.py  test_generate_workflow_graph.py
tests/domain/: test_entities.py  test_errors.py
tests/infrastructure/fs/: test_discovery.py  test_document_repository.py
tests/infrastructure/parsing/: test_analyzer.py  test_ast_mapper.py  test_call_parser.py  test_miniwdl_parser.py  test_wdl_loader.py
tests/infrastructure/rendering/: test_documentation_generator.py  test_html_generator.py  test_template_renderer.py  test_workflow_call_tracking.py
(+30 files in other folders)
